# google-webrtc

./: BUILD.gn  webrtc.gni
api/: audio_options.cc  audio_options.h  ice_transport_factory.cc  ice_transport_interface.h  stats_types.cc  stats_types.h
api/audio_codecs/opus/: audio_decoder_opus.cc
api/stats/: rtcstats_objects.h
api/video/: video_codec_type.h
api/video_codecs/: video_codec.cc  video_encoder.cc
audio/: channel_receive.cc  channel_send.cc
build_overrides/: build.gni
common_video/: BUILD.gn
common_video/h264/: prefix_parser.cc  prefix_parser.h
logging/rtc_event_log/: rtc_event_log_parser.cc
logging/rtc_event_log/encoder/: rtc_event_log_encoder_new_format.cc
media/base/: media_constants.cc  media_constants.h  media_engine.h
media/engine/: payload_type_mapper.cc  webrtc_video_engine.cc  webrtc_voice_engine.cc  webrtc_voice_engine.h
modules/audio_coding/: BUILD.gn
modules/audio_coding/neteq/: expand.cc  expand.h
modules/audio_device/win/: audio_device_core_win.cc  core_audio_output_win.cc
modules/audio_processing/: BUILD.gn  audio_processing_impl.cc  audio_processing_impl.h
modules/audio_processing/aec3/: BUILD.gn  aec_state.cc  dominant_nearend_detector.cc  dominant_nearend_detector.h  echo_canceller3.cc  echo_remover.cc  matched_filter.cc  matched_filter_lag_aggregator.cc  matched_filter_lag_aggregator.h  nearend_detector.h  render_delay_buffer.cc  render_delay_controller.cc  subband_nearend_detector.cc  subband_nearend_detector.h  suppression_gain.cc  suppression_gain.h
modules/audio_processing/aec_dump/: aec_dump_impl.cc
modules/audio_processing/hs/: BUILD.gn  howling_suppression_impl.cc  howling_suppression_impl.h  howling_suppressor.cc  howling_suppressor.h  howling_suppressor_lpc.cc  howling_suppressor_lpc.h  hs_common.h  hs_fft_1024.cc  hs_fft_1024.h  notch_filter.cc  notch_filter.h
modules/audio_processing/include/: audio_processing.cc  audio_processing.h
modules/audio_processing/logging/: apm_data_dumper.cc  apm_data_dumper.h
modules/audio_processing/pns/: BUILD.gn  embedder.cc  embedder.h  mel_feature.cc  mel_feature.h  personal_ns.cc  personal_ns.h  personal_ns_impl.cc  personal_ns_impl.h  pns_fft.cc  pns_fft.h  voice_filter.cc  voice_filter.h
modules/audio_processing/pns/onnxruntime/: CodeSignSummary-b9ec06e4-0e7f-458a-8d11-8f52958bb67b.md  GIT_COMMIT_ID
modules/audio_processing/rnnoise/: BUILD.gn  celt_lpc.c  celt_lpc.h  common.h  denoise.c  kiss_fft.c  kiss_fft.h  pitch.c  pitch.h  rnn.c  rnn.h  rnn_data.c  rnn_noise_suppression.cc  rnn_noise_suppression.h  rnnoise.h  tansig_table.h
modules/desktop_capture/: cropping_window_capturer.cc  cropping_window_capturer.h  cropping_window_capturer_win.cc  desktop_frame.cc  desktop_frame.h  window_capturer_mac.mm
modules/desktop_capture/mac/: desktop_configuration.h  desktop_configuration.mm  full_screen_mac_application_handler.cc  window_list_utils.cc  window_list_utils.h
modules/rtp_rtcp/: BUILD.gn
modules/rtp_rtcp/source/: rs_fec.cc  rs_fec.h  (+6 more)
modules/video_coding/: BUILD.gn  nack_requester.cc  packet_buffer.cc  session_info.cc
p2p/base/: default_ice_transport_factory.cc  dtls_transport.cc  dtls_transport.h  dtls_transport_unittest.cc  fake_dtls_transport.h  fake_ice_transport.h  fake_packet_transport.h  fake_port_allocator.h  mock_ice_transport.h  p2p_transport_channel.cc  p2p_transport_channel.h  p2p_transport_channel_unittest.cc  packet_transport_internal.h  port_allocator.cc  port_allocator.h  port_allocator_unittest.cc  regathering_controller_unittest.cc
p2p/client/: basic_port_allocator.cc  basic_port_allocator.h  basic_port_allocator_unittest.cc
pc/: channel_unittest.cc  dtls_srtp_transport_unittest.cc  dtls_transport_unittest.cc  ice_transport_unittest.cc  jsep_transport_controller.cc  jsep_transport_controller.h  jsep_transport_controller_unittest.cc  jsep_transport_unittest.cc  peer_connection.cc  peer_connection.h  peer_connection_factory.cc  rtc_stats_collector.cc  rtc_stats_collector_unittest.cc  rtp_sender_receiver_unittest.cc  sctp_transport_unittest.cc  sdp_offer_answer.cc  session_description.h  webrtc_sdp.cc
pc/test/: integration_test_helpers.h
rtc_base/: BUILD.gn
sdk/: BUILD.gn
sdk/android/: BUILD.gn
stats/: rtcstats_objects.cc
video/: send_statistics_proxy.cc
video/config/: video_encoder_config.cc  video_encoder_config.h
(+28 files in other folders)
